--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Profile Card</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   </head>
@@ -16,10 +18,10 @@
             <img src="assets/image/bg.jpeg" alt="">
           </div>
           <div class="profile-image">
-            <img src="assets/image/myPic.jpeg" alt="">
+            <img src="assets/image/myPic.jpeg" alt="My Profile Image" data-testid="profilePicture">
           </div>
           <div class="card-content">
-            <h2>Ovu Onoriode Karen</h2>
+            <h2 data-testid="profilePicture">Ovu Onoriode Karen</h2>
             <h3>Frontend Developer</h3>
             <p>I am a passionate frontend developer skilled in HTML, CSS, JavaScript, and modern frameworks like React. 
                 I specialize in creating responsive, user-friendly web applications that enhance digital experiences. Based in Lagos, Nigeria, I thrive on solving complex UI/UX challenges and continuously learning new technologies. My goal is to build seamless, efficient, and visually appealing web solutions that drive engagement and usability.
